use gotestsum in CI

--- a/agent/keycloak/Makefile
+++ b/agent/keycloak/Makefile
@@ -22,7 +22,7 @@ build-server:
 
 # Run tests
 test:
-	go test -v ./...
+	gotestsum --format pkgname-and-test-fails
 
 # Clean build artifacts
 clean:
