--- a/assembly/Makefile
+++ b/assembly/Makefile
@@ -8,7 +8,7 @@ export CGO_ENABLED=0
 
 # Run all tests
 test:
-	go test -v ./...
+	gotestsum --format pkgname-and-test-fails
 
 # Run tests with coverage
 test-coverage:
