--- a/agent/edcv/Makefile
+++ b/agent/edcv/Makefile
@@ -24,7 +24,7 @@ build-server:
 
 # Run tests
 test:
-	go test -v ./...
+	gotestsum --format pkgname-and-test-fails
 
 # Clean build artifacts
 clean:
