--- a/pmanager/Makefile
+++ b/pmanager/Makefile
@@ -33,7 +33,7 @@ generate-docs:
 
 # Run tests
 test:
-	go test -v ./...
+	gotestsum --format pkgname-and-test-fails
 
 # Clean build artifacts
 clean:
