--- a/common/Makefile
+++ b/common/Makefile
@@ -15,7 +15,7 @@ COVER_PROFILE=coverage.out
 
 # Run all tests
 test:
-	gotestsum --format pkgname-and-test-fails
+	gotestsum --format github-actions ./... -count 1 ./...
 
 # Run tests with coverage
 test-coverage:
