--- a/tmanager/Makefile
+++ b/tmanager/Makefile
@@ -29,7 +29,7 @@ generate-docs:
 
 # Run tests
 test:
-	gotestsum --format pkgname-and-test-fails
+	gotestsum --format github-actions ./... -count 1
 
 # Clean build artifacts
 clean:
