--- a/agent/keycloak/Makefile
+++ b/agent/keycloak/Makefile
@@ -22,7 +22,7 @@ build-server:
 
 # Run tests
 test:
-	gotestsum --format pkgname-and-test-fails
+	gotestsum --format github-actions ./... -count 1
 
 # Clean build artifacts
 clean:
