--- a/agent/edcv/Makefile
+++ b/agent/edcv/Makefile
@@ -24,7 +24,7 @@ build-server:
 
 # Run tests
 test:
-	gotestsum --format github-actions ./... -count 1
+	$(TEST_CMD)
 
 # Clean build artifacts
 clean:
