fix: include assembly/ directory in tests (#51)
* fix: include assembly/ directory in tests

* switch format

* use central test command

--- a/common/Makefile
+++ b/common/Makefile
@@ -15,7 +15,7 @@ COVER_PROFILE=coverage.out
 
 # Run all tests
 test:
-	gotestsum --format pkgname-and-test-fails
+	$(TEST_CMD)
 
 # Run tests with coverage
 test-coverage:
